--- a/Data.Rmd
+++ b/Data.Rmd
@@ -28,6 +28,6 @@ https://www.ons.gov.uk/peoplepopulationandcommunity/birthsdeathsandmarriages/dea
 
 Website updated on `r format(Sys.Date(), "%d/%m/%Y")`.
 
-Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessadra Lochen
+Website by Daniel Anderson, Giovanni Forchini, Katharina Hauck, Alessandra Lochen
 
 
